versions/v3.7.0/doxygen/html/globals_defs_z.md
---
version: v3.7.0
source_url: https://docs.zephyrproject.org/3.7.0/doxygen/html/globals_defs_z.html
original_path: doxygen/html/globals_defs_z.html
---

| Logo | Zephyr API Documentation  3.7.0  A Scalable Open Source RTOS |
| --- | --- |

Loading...

Searching...

No Matches

Here is a list of all macros with links to the files they belong to:

### - z -

- zassert : [ztest\_assert.h](group__ztest__assert.md#ga0911ad9e94cdf1fe011d21316683ee7f)
- zassert\_between\_inclusive : [ztest\_assert.h](group__ztest__assert.md#ga2b6b41de3e4856b21458febab3261b91)
- zassert\_equal : [ztest\_assert.h](group__ztest__assert.md#gacd075c7ee4dc2d64701bd3098a31b673)
- zassert\_equal\_ptr : [ztest\_assert.h](group__ztest__assert.md#gabf20273fcba9cc45939a9f7db77f0bfc)
- zassert\_false : [ztest\_assert.h](group__ztest__assert.md#ga7330d1794fb961e07ee40294019dead0)
- zassert\_is\_null : [ztest\_assert.h](group__ztest__assert.md#gac0839891fd8bb7313b98551465e04c19)
- zassert\_mem\_equal : [ztest\_assert.h](group__ztest__assert.md#gabbfcf6345172387326d35b5d0e2bb051)
- zassert\_mem\_equal\_\_ : [ztest\_assert.h](group__ztest__assert.md#ga30e5fefa185944d3e949d4023c2eea27)
- zassert\_not\_equal : [ztest\_assert.h](group__ztest__assert.md#ga43f306bf33d5e837b8927df16b82a363)
- zassert\_not\_null : [ztest\_assert.h](group__ztest__assert.md#ga849adad4afe893a7ae3dc2fbe750dc00)
- zassert\_not\_ok : [ztest\_assert.h](group__ztest__assert.md#gafe0e2609f77906ab0caddc31448a4fc8)
- zassert\_ok : [ztest\_assert.h](group__ztest__assert.md#gade40e2ec78ec813739e7725524fae7f0)
- zassert\_str\_equal : [ztest\_assert.h](group__ztest__assert.md#ga382017945a8c409e885cad8d0909b197)
- zassert\_true : [ztest\_assert.h](group__ztest__assert.md#gaeebddde19012223e3d5e853a1dac3ac5)
- zassert\_unreachable : [ztest\_assert.h](group__ztest__assert.md#ga300684a6b56e73e2cad6fd7458541129)
- zassert\_within : [ztest\_assert.h](group__ztest__assert.md#gacc930af1a66e8533c5eca9526e198b4b)
- zassume : [ztest\_assert.h](group__ztest__assert.md#ga5a4319eec770be532f34acb86e022c48)
- zassume\_between\_inclusive : [ztest\_assert.h](group__ztest__assume.md#gacff02eeba8dd334b3727dbe2036617e3)
- zassume\_equal : [ztest\_assert.h](group__ztest__assume.md#ga88c2a3153568a6f621b88dd6ceeb48d6)
- zassume\_equal\_ptr : [ztest\_assert.h](group__ztest__assume.md#ga78d6fbbf5eb13b32a5164053811b6cca)
- zassume\_false : [ztest\_assert.h](group__ztest__assume.md#ga5acf4256e5af3afaed06da7400dc3ad5)
- zassume\_is\_null : [ztest\_assert.h](group__ztest__assume.md#ga3c5b1814deb5974e8ba0af961b516fa0)
- zassume\_mem\_equal : [ztest\_assert.h](group__ztest__assume.md#ga62be45256399530167745e71226e4a37)
- zassume\_mem\_equal\_\_ : [ztest\_assert.h](group__ztest__assume.md#gaaed6045f194ead4ffe1dd72a6fa5175d)
- zassume\_not\_equal : [ztest\_assert.h](group__ztest__assume.md#ga0d90bb874c3135ffee870a4b61607853)
- zassume\_not\_null : [ztest\_assert.h](group__ztest__assume.md#ga24f4144edf5cef493c88872c7d56900e)
- zassume\_not\_ok : [ztest\_assert.h](group__ztest__assume.md#ga539831d2f42cc991a8295b388ec12846)
- zassume\_ok : [ztest\_assert.h](group__ztest__assume.md#ga9c6d1c701dd2d50027bf5e24b7567ae4)
- zassume\_str\_equal : [ztest\_assert.h](group__ztest__assume.md#ga33a9cd37d321f1a421a1328e67b04788)
- zassume\_true : [ztest\_assert.h](group__ztest__assume.md#ga6f5778ed8c1205126f7dcafb6eb26905)
- zassume\_within : [ztest\_assert.h](group__ztest__assume.md#gad808c91e07e6c27b2e28ec7e04e03854)
- ZB\_MAC\_SOURCE : [esp-esp32c6-intmux.h](esp-esp32c6-intmux_8h.md#a3562ce23b1b55e367bc9165b68e6b937)
- ZBUS\_CHAN\_ADD\_OBS : [zbus.h](group__zbus__apis.md#gaf63215f3f53741edf52b4d0d7b2b97df)
- ZBUS\_CHAN\_ADD\_OBS\_WITH\_MASK : [zbus.h](group__zbus__apis.md#ga7f763caca474e6c910793d2c714f80b4)
- ZBUS\_CHAN\_DECLARE : [zbus.h](group__zbus__apis.md#ga0662b2db8077a8075c07a3afd0161d0f)
- ZBUS\_CHAN\_DEFINE : [zbus.h](group__zbus__apis.md#ga29a3a39e5c78a34b2d8491615d1f0687)
- ZBUS\_LISTENER\_DEFINE : [zbus.h](group__zbus__apis.md#gabfc7be8298e76fe2f7ae628be30b8390)
- ZBUS\_LISTENER\_DEFINE\_WITH\_ENABLE : [zbus.h](group__zbus__apis.md#gace4ac9da0e1bab7ba72797783ded948f)
- ZBUS\_MSG\_INIT : [zbus.h](group__zbus__apis.md#ga4bf8c445814c1fcee9b9819a36bc9bd6)
- ZBUS\_MSG\_SUBSCRIBER\_DEFINE : [zbus.h](group__zbus__apis.md#ga07a0c2c428c9e4891e86a63a420b2268)
- ZBUS\_MSG\_SUBSCRIBER\_DEFINE\_WITH\_ENABLE : [zbus.h](group__zbus__apis.md#ga6089c1ae0dad91306f79d48a63b31785)
- ZBUS\_OBS\_DECLARE : [zbus.h](group__zbus__apis.md#ga49f169c6d50a3bad57e1b319362d2924)
- ZBUS\_OBSERVERS : [zbus.h](group__zbus__apis.md#gafed25f045c3b8d438daf4ebd5e517692)
- ZBUS\_OBSERVERS\_EMPTY : [zbus.h](group__zbus__apis.md#ga763dad07a1ae9bb38f9c240e1920caef)
- ZBUS\_SUBSCRIBER\_DEFINE : [zbus.h](group__zbus__apis.md#gac17a735cccecfc90f26127e48cf6279a)
- ZBUS\_SUBSCRIBER\_DEFINE\_WITH\_ENABLE : [zbus.h](group__zbus__apis.md#gaf56f71babe2bb27258f025332b80c58f)
- ZEPHYR\_ARCH\_X86\_INCLUDE\_X86\_ACPI\_H\_ : [x86\_acpi\_osal.h](x86__acpi__osal_8h.md#ae9d75b39c455425398c1df34aa1d8f9f)
- ZEPHYR\_DRIVERS\_INTERRUPT\_CONTROLLER\_INTC\_RA\_ICU\_H\_ : [intc\_ra\_icu.h](intc__ra__icu_8h.md#a28f51943d0ae322da596758f4134a7b6)
- ZEPHYR\_MGMT\_GRP\_BASIC\_CMD\_ERASE\_STORAGE : [zephyr\_basic.h](zephyr__basic_8h.md#a335d87c4927506ef1e5a52e3ae2b23d2)
- ZEPHYR\_MODEM\_BACKEND\_TTY\_ : [tty.h](modem_2backend_2tty_8h.md#a69a30337ca00de462fc67e47401334f4)
- ZEPHYR\_MODEM\_BACKEND\_UART\_ : [uart.h](modem_2backend_2uart_8h.md#a5155dc70533cab6952423061f00513c3)
- ZEPHYR\_MODEM\_PPP\_ : [ppp.h](modem_2ppp_8h.md#a4c10bd93401ebba9cc89f81a6f9ab6f2)
- ZERO\_FRAME : [seagate\_legend\_b1414.h](seagate__legend__b1414_8h.md#ada4655bb5f9b877b2cf6e48206abf5d1)
- ZERO\_OR\_COMPILE\_ERROR : [util.h](group__sys-util.md#ga831cb8468911b8ebdb9b42682778e53d)
- zero\_sysreg : [lib\_helpers.h](4_2lib__helpers_8h.md#a71bba9d3a17e4940df59c934c24910c2)
- zexpect : [ztest\_assert.h](group__ztest__assert.md#ga7bd837a8164123e3a06795b9f87a308d)
- zexpect\_between\_inclusive : [ztest\_assert.h](group__ztest__expect.md#gac37ebea6a9c71e3666a4911ceea5c913)
- zexpect\_equal : [ztest\_assert.h](group__ztest__expect.md#ga5ba65dbf95c204ed60694c5757db247f)
- zexpect\_equal\_ptr : [ztest\_assert.h](group__ztest__expect.md#gabf791d13c5781fc2215289d6dd925b3e)
- zexpect\_false : [ztest\_assert.h](group__ztest__expect.md#ga619bd320e39799414383a228dc2d8299)
- zexpect\_is\_null : [ztest\_assert.h](group__ztest__expect.md#ga10b2c904f1c68b816eae2ad53e2b9f90)
- zexpect\_mem\_equal : [ztest\_assert.h](group__ztest__expect.md#gaee52264e5f92a606a2a85f5fbb0a85fb)
- zexpect\_not\_equal : [ztest\_assert.h](group__ztest__expect.md#ga31d83ab89828a03aebe0d0dc003f5232)
- zexpect\_not\_null : [ztest\_assert.h](group__ztest__expect.md#gaa51053fe2a07c6417db7952d7a594798)
- zexpect\_not\_ok : [ztest\_assert.h](group__ztest__expect.md#gabde5406775f05d5fcd135eb926969004)
- zexpect\_ok : [ztest\_assert.h](group__ztest__expect.md#gaab325ee22058252c6a1c3243f3226657)
- zexpect\_str\_equal : [ztest\_assert.h](group__ztest__expect.md#gacd5ef284610ca2027fc2e892243dfd38)
- zexpect\_true : [ztest\_assert.h](group__ztest__expect.md#gaef66b2764b6086dfbe8cbc933a8cfdc3)
- zexpect\_within : [ztest\_assert.h](group__ztest__expect.md#ga907afb07269bbc444a3d8ffee46839b5)
- ZRESTRICT : [common.h](common_8h.md#a39314fd705c5a9ed45b671ca36f883fd)
- ZSOCK\_FD\_SETSIZE : [socket\_select.h](group__bsd__sockets.md#ga5c88da69b8d9401d3ae02495056f7e23)
- ZSOCK\_MSG\_CTRUNC : [socket.h](group__bsd__sockets.md#gabdc593f541a4f9a607cfe140cee19c4a)
- ZSOCK\_MSG\_DONTWAIT : [socket.h](group__bsd__sockets.md#ga92cf4460e23f376bf130d885ea64ed6b)
- ZSOCK\_MSG\_PEEK : [socket.h](group__bsd__sockets.md#gae7da123a40584192b65af77e918080b9)
- ZSOCK\_MSG\_TRUNC : [socket.h](group__bsd__sockets.md#gae594c5e74cd473df8e3328a4cd935ce1)
- ZSOCK\_MSG\_WAITALL : [socket.h](group__bsd__sockets.md#ga00b950f50302d97c27111da49f5289fb)
- ZSOCK\_POLLERR : [socket.h](group__bsd__sockets.md#gad44368a112fbf91436a2439e7b767641)
- ZSOCK\_POLLHUP : [socket.h](group__bsd__sockets.md#gadd341cd5c1f6d7deeaedc5c58dc56fe7)
- ZSOCK\_POLLIN : [socket.h](group__bsd__sockets.md#ga6ade0deb4952e1ea23b368d9eceee9ed)
- ZSOCK\_POLLNVAL : [socket.h](group__bsd__sockets.md#ga45c5b0efca6e09e4f7db78d1d007bf67)
- ZSOCK\_POLLOUT : [socket.h](group__bsd__sockets.md#ga9ca302c64dfb676798ce03100894ca3e)
- ZSOCK\_POLLPRI : [socket.h](group__bsd__sockets.md#ga1c96c16d5000db0fa4b69055ebb97839)
- ZSOCK\_SHUT\_RD : [socket.h](group__bsd__sockets.md#ga2a58cbc62db1e559898ea979454d74d4)
- ZSOCK\_SHUT\_RDWR : [socket.h](group__bsd__sockets.md#ga788dcff81663a9fb01e32b53bca13e2d)
- ZSOCK\_SHUT\_WR : [socket.h](group__bsd__sockets.md#ga87630f1abe81c4e33a24cb1f1ebb3571)
- ZTEST : [ztest\_test.h](group__ztest__test.md#gac25858f76ea667d07de422a3b489cb15)
- ZTEST\_BMEM : [ztest\_test.h](group__ztest__test.md#gac3de5965061b1164a8033712c9094e23)
- ztest\_check\_expected\_data : [ztest\_mock.h](group__ztest__mock.md#ga805cf99272f147beeeee5ad6ca2553f5)
- ztest\_check\_expected\_value : [ztest\_mock.h](group__ztest__mock.md#gae9af6ba8e51738e938763c896f17ea8f)
- ztest\_copy\_return\_data : [ztest\_mock.h](group__ztest__mock.md#ga12872a3d783d53d564ed94583bc490b0)
- ZTEST\_DMEM : [ztest\_test.h](group__ztest__test.md#ga2c7d0aa85e7f320d582395c5ded90133)
- ztest\_expect\_data : [ztest\_mock.h](group__ztest__mock.md#gac1a64d8bf9c877e8666e0c6d93b0dbab)
- ZTEST\_EXPECT\_FAIL : [ztest\_test.h](group__ztest__test.md#gaeaa5b96855dd45e015b9556212f8945a)
- ZTEST\_EXPECT\_SKIP : [ztest\_test.h](group__ztest__test.md#gacb6f06920e522b9a9f6e7a98f0620f38)
- ztest\_expect\_value : [ztest\_mock.h](group__ztest__mock.md#ga58c2f0c0e628e73a2268a3d18b0440d6)
- ZTEST\_F : [ztest\_test.h](group__ztest__test.md#gacd3ab522e0e5c8a270e86b0cb6bd81b2)
- ztest\_get\_return\_value : [ztest\_mock.h](group__ztest__mock.md#ga31dcd5b5a3596a7404a771a2d32f3a39)
- ztest\_get\_return\_value\_ptr : [ztest\_mock.h](group__ztest__mock.md#gaa2df2eaeba49019b7a83ac769ea95968)
- ztest\_return\_data : [ztest\_mock.h](group__ztest__mock.md#gac79d097a6b274b25286f2b0e80fbd6e9)
- ztest\_returns\_value : [ztest\_mock.h](group__ztest__mock.md#ga2ec539b4c0f3e4efb695213b4fd08c2c)
- ZTEST\_RULE : [ztest\_test.h](group__ztest__test.md#ga2a0a5e3b6e8fa1c9a03e7600895d875f)
- ztest\_run\_test\_suite : [ztest\_test.h](group__ztest__test.md#ga29557673d07a87d5d4ace36521937848)
- ZTEST\_SECTION : [ztest\_test.h](group__ztest__test.md#ga44777f5011728bbff63fe3639c1b4aa8)
- ZTEST\_SUITE : [ztest\_test.h](group__ztest__test.md#gaef8892743e2d47c983efcb61beeedeb3)
- ZTEST\_SUITE\_COUNT : [ztest\_test.h](group__ztest__test.md#ga678b4ae96879c029e6e567a326bbf027)
- ZTEST\_TEST\_COUNT : [ztest\_test.h](group__ztest__test.md#ga8777ca60bd21cc128f64833bd7921b9c)
- ZTEST\_USER : [ztest\_test.h](group__ztest__test.md#ga7121acc7ee00646cacefa773ff9631c8)
- ZTEST\_USER\_F : [ztest\_test.h](group__ztest__test.md#ga12ccce144e577cac6ba763982ad14def)
- ZTRESS\_CONTEXT\_INITIALIZER : [ztress.h](group__ztest__ztress.md#gab5e8bbcecd77db06e7a90631fc0c202b)
- ZTRESS\_EXECUTE : [ztress.h](group__ztest__ztress.md#ga6acc3a50e0eff7360873006482f5c8e9)
- ZTRESS\_ID\_K\_TIMER : [ztress.h](ztress_8h.md#a937803e1398db7d0e10ea60c9c9ef642)
- ZTRESS\_ID\_THREAD : [ztress.h](ztress_8h.md#a8752d529cfc4d77b1dd71c4572fd63c3)
- ZTRESS\_THREAD : [ztress.h](group__ztest__ztress.md#gaed561641541e8ced6866f2f1227f21c0)
- ZTRESS\_TIMER : [ztress.h](group__ztest__ztress.md#gabab05b8db44a7024ce23cb34bf999e42)
- ZVFS\_EFD\_NONBLOCK : [eventfd.h](zvfs_2eventfd_8h.md#a6374eeebdd4ebe2d5580f5be79839c26)
- ZVFS\_EFD\_SEMAPHORE : [eventfd.h](zvfs_2eventfd_8h.md#acab48945c7bdd3530651feeb169b75f6)
- ZVFS\_MODE\_IFBLK : [fdtable.h](fdtable_8h.md#a0da8fae58fe76c88d5701e5c0683da91)
- ZVFS\_MODE\_IFCHR : [fdtable.h](fdtable_8h.md#a02b35555e5ea7d2a577daa2b14ca7c6b)
- ZVFS\_MODE\_IFDIR : [fdtable.h](fdtable_8h.md#a44cd1a7ec98550ba895b0906ffbcb52d)
- ZVFS\_MODE\_IFIFO : [fdtable.h](fdtable_8h.md#a6af8ed654a6cc5e0b21b2374ab56d4ae)
- ZVFS\_MODE\_IFLNK : [fdtable.h](fdtable_8h.md#a66443b8d46b4f32cf1a17a3d0a0a1486)
- ZVFS\_MODE\_IFMT : [fdtable.h](fdtable_8h.md#a1a7eb223a64cc8df1d236ad9d4373c04)
- ZVFS\_MODE\_IFREG : [fdtable.h](fdtable_8h.md#ad0bb04c7688eb917fa06939f277cc8c0)
- ZVFS\_MODE\_IFSEM : [fdtable.h](fdtable_8h.md#a22ed252f154ab0a11edfedd2c1468647)
- ZVFS\_MODE\_IFSHM : [fdtable.h](fdtable_8h.md#aa6c681e545a9ab1644c47d83d375697c)
- ZVFS\_MODE\_IFSOCK : [fdtable.h](fdtable_8h.md#a2b0c1987c6ab087dd6cd91e7af2fb883)
- ZVFS\_MODE\_IMSGQ : [fdtable.h](fdtable_8h.md#a2bdc08321b707a710c4fc3f755638954)
- ZVFS\_MODE\_UNSPEC : [fdtable.h](fdtable_8h.md#a4696b5a4cecb531946d2f5b2ecd8b8ff)

- Generated on  for Zephyr API Documentation by [![doxygen](https://docs.zephyrproject.org/3.7.0/doxygen/html/doxygen.svg)](https://www.doxygen.org/index.html) 1.16.1
